# ChangeLog for sys-kernel/gentoo-sources
# Copyright 1999-2013 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/sys-kernel/gentoo-sources/ChangeLog,v 1.1167 2013/08/05 14:46:40 mpagano Exp $

  05 Aug 2013; Michael Pagano <mpagano@gentoo.org>
  -gentoo-sources-3.0.84.ebuild, -gentoo-sources-3.0.85.ebuild,
  -gentoo-sources-3.0.86.ebuild, -gentoo-sources-3.4.51.ebuild,
  -gentoo-sources-3.4.52.ebuild, -gentoo-sources-3.4.53.ebuild,
  -gentoo-sources-3.10.0.ebuild, -gentoo-sources-3.10.1.ebuild,
  -gentoo-sources-3.10.2.ebuild:
  Remove old versions

*gentoo-sources-3.10.5 (05 Aug 2013)

  05 Aug 2013; Michael Pagano <mpagano@gentoo.org>
  +gentoo-sources-3.10.5.ebuild:
  Linux patch 3.10.5

*gentoo-sources-3.0.88 (29 Jul 2013)

  29 Jul 2013; Michael Pagano <mpagano@gentoo.org>
  +gentoo-sources-3.0.88.ebuild:
  Linux patch 3.0.88. Support for namespace user.pax.* on tmpfs. Patch to
  initialize satype in key_notify_policy_flush(). Patch to fix zcache build
  error. ALPS Touchpad patches: Add PSMOUSE_CMD_RESET_WRAP; Move the protocol
  information to Documentation for the ALPS Touchpad; Add protocol version
  field in alps_model_info; Remove assumptions about packet size; Add support
  for protocol versions 3 and 4; Add documentation for protocol versions 3 and
  4; Add semi-MT support for v3 protocol and dump raw packet data. ACPI patch
  to disable Windows 8 compatibility for some Lenovo ThinkPads. fbcondecor
  console decoration patch.

*gentoo-sources-3.4.55 (29 Jul 2013)

  29 Jul 2013; Michael Pagano <mpagano@gentoo.org>
  +gentoo-sources-3.4.55.ebuild:
  Linux patch 3.4.55. Patch to add support for namespace user.pax.* on tmpfs.
  Security path to initialize satype in key_notify_policy_flush(). Patch to
  correct firmware version for bnx2 on mips. Patch for zero copy for infiniband
  psm userspace driver. Patch to fix build warnings for lpfc when debugfs is