@@ -17,6 +17,8 @@ DIST genpatches-3.0-58.base.tar.xz 987836 SHA256 3e3613313d4e1608feb125f732dcda0
 DIST genpatches-3.0-58.extras.tar.xz 16760 SHA256 f41f09a944b08d354dc286c3b0775a1adac62fc4ce74b29c9a3c77768b88b79f SHA512 2bab6415b7cc12de7b40c686290f53baa22026e29d5ed4075dd1ed9e60e4ebdf65425c0cdbeed49d8a21f02a4461717e520c42052debbe57cacfedcfd0bac406 WHIRLPOOL 834881583d5732a9c1aaff4c9c3db0fa2600bf56aa494399b6d2c34c4eec9f1f8f854f728d680c5ec252c9dfb26f8cf42c066505f2df46ed6e2a3541ff44bbaf
 DIST genpatches-3.0-59.base.tar.xz 994588 SHA256 cdcd0ec079655331a2dc10c93d021e0f4cca99deebaa283caa193e1930926ec1 SHA512 f0ffbbf4dc1e7e00bbd4f0529bc37bf77eba7f1ad51887a322b4a70255295d44856400caf84aa77db262a78309bd5c305f18da9dc6e1b9ebe98272cae139da87 WHIRLPOOL 1611c7537607736b24b4dc0832ca42f0be29c88643720190efd45990d06f4bc84387704156aa39b3eb5ea9cfc74066565f88689bb6f36a965eda97d10d6e8c36
 DIST genpatches-3.0-59.extras.tar.xz 16760 SHA256 63e9eb61a3275613b82f37cbdbbb978f5684f5d793c87338feeb96ee1dfe1fec SHA512 9008b4abb4628db326e6869691ac55e8b9a46d5faebf6df336425bc0b6f4c1ba3afb362c55e6fe492142d4aae9c3f354c895b7360eeeee5ff7931dfd6a394668 WHIRLPOOL 2f499f0aba53270cac08d58dfade4f803c884fa0ce5046918dafbc8980f372b9df6fde59a1cb17262534c5d687c05fa2d38cf2f9a0385ad2b5341e18000493d3
+DIST genpatches-3.10-10.base.tar.xz 168240 SHA256 34fb1edc57b03f84ea734d0336cb1bf54ae570bbe693c65a6396f886b313b10e SHA512 d5733a90a9c52f607cc4fee208245611319d60748902b7bbd4419d09343165f5a40346aa0558b1ce0641a0742583706a83e7418bdbb3e3bf608fec97fd519c8f WHIRLPOOL fad2969819768b59456f2ff5ef295f5ce0973d3a7ec1ad07e1c9b44a1d71136fe88317f5d490e95695a47a9a9f8df7eb5bef0d48d9b1fdb05fe9ad6eafe2ae9c
+DIST genpatches-3.10-10.extras.tar.xz 16564 SHA256 e844a521c1e7b92728f373b3ca8cca1a5efee5827eaff03adb0b8bf30dff43d3 SHA512 08b40729aaafa452943dc0f049fcb01fea2720ea49f70791d641dbcfebb732e917073225040cc4777a2e7f0b2d2ee7de19f163575d766c3b448bab65379b698c WHIRLPOOL ece78b18724e043d1eb736d688dce758321c634abf2ee7730afd2707e4b7430591741f449843c6935c576acf1660b2f72a4161697bcb57e137c47c91612f2ec0
 DIST genpatches-3.10-7.base.tar.xz 110968 SHA256 a1fd1e8c6ca30286a9c4487b18ffac8ec9b26f519bc2599eacec97a3c205423a SHA512 45ce0aa617801e386683ea4ad0c3a30ba5caa99c3ecfb06d427c5674668a279f0b9e864227c836aaad70c0e05ee7724e47e350341b794ab52dc3c20255c49966 WHIRLPOOL 0c948fd8e82378104370b84cf112f2aa8b4fa7a5cb727a1e8374404e29cb243371f84f2d67fd65b776e4a79d2a4689f62946f907db1cab80615c75f4fa478eb7
 DIST genpatches-3.10-7.extras.tar.xz 16564 SHA256 e844a521c1e7b92728f373b3ca8cca1a5efee5827eaff03adb0b8bf30dff43d3 SHA512 08b40729aaafa452943dc0f049fcb01fea2720ea49f70791d641dbcfebb732e917073225040cc4777a2e7f0b2d2ee7de19f163575d766c3b448bab65379b698c WHIRLPOOL ece78b18724e043d1eb736d688dce758321c634abf2ee7730afd2707e4b7430591741f449843c6935c576acf1660b2f72a4161697bcb57e137c47c91612f2ec0
 DIST genpatches-3.10-8.base.tar.xz 132848 SHA256 5487556f9ce9967d044ce2831790c09b1c475f7a01bc99e6d53a4301ab680594 SHA512 487b78e332e053b502ec9d128e1bdc3733d400ea5647c87d6a62bb73db7c0d9c384b2742e315ff8ca7b39676be819f24f7889ea5fb20f0497926785bb0e4edfd WHIRLPOOL 76fd23b279b8934b7daf4a327df828e799d2d8e611516074dcb5e1db5f32e30714fade6465fd38f8bd67ea4fe53d0e5e4524135fc48befe4efddbfe27820adb1
@@ -43,20 +45,21 @@ EBUILD gentoo-sources-3.0.87.ebuild 860 SHA256 e4f84f598f219ec1d11b50734ffdcaba7
 EBUILD gentoo-sources-3.0.88.ebuild 861 SHA256 26a8e278c8ab0a67207c2eacf01a7c44a37ee0ae27990bbffb8e33064a864728 SHA512 a19b906e00a50b2d0382825362b4258446e33e94bcbe22ff50eec6eb85b48ac53294bac45656618038362539e6c794841cb86a435aa15dc804498248a3c1d1b6 WHIRLPOOL 74f1968628a726196f6bc584d0841c962556b2d9dc1e660d6470fd359d6747201b2af3965cc29b22edb6b05b8d7b1928c695ba6fab6b637278646f7bfbd78a67
 EBUILD gentoo-sources-3.10.3-r1.ebuild 869 SHA256 bdd2b66cd43c7dcfdb8b7eb8e3874a7ee005f1a5d94262663ce384a8166a9bfd SHA512 6f04ae38e4f47b6c2398ce4d8e669b841c8e7bc175561c43cd89a062aa1c864fb20e4f17aca8f110a39118c59092173c832da6f8872608c43f14025d7fa170ff WHIRLPOOL 860f9b0f387e513d93e2292712e5cd5022a0eaac84058aaeb14c915a4aa754b199f4338044958ddb8cfe3d892108b1a597160dad72fa89d9e29d2efde94385e5
 EBUILD gentoo-sources-3.10.4.ebuild 866 SHA256 388724a2635f735bddfc22a00ee2f9d1702382e09f22aabcd94cab4b0d39d0c6 SHA512 a5b057afdd9e9b3eaa0dfbe82e78d42e37b6185e9ab8d3afc8e53284077354d3b0f27863b1880cf56acfcf928b17181dfa617bcfc54be7fe2c4befaabf0c9ec5 WHIRLPOOL eaeef4f82aa920730bbd8aa2e7a6ddc5ba593632e762c7e17ba7ecfb0f5d04771e48131bf52aa37fa9351c846a7bbde52cef4e864be0ab06ad6d14d7ba700a52
+EBUILD gentoo-sources-3.10.5-r1.ebuild 870 SHA256 46a48e34daaaf5a60fa50689d2500a0ac9dc82be8c1cc58b46c37998cd1ca90f SHA512 69988388d053374398b26e8e44dbf5a4370c44e2fcd6ff90f167a4a1c9e5b70fb5083ff76d5f6c79155d7ac9c2faefc2f54a4ece94e465e129104bf511740d51 WHIRLPOOL 2be180b5ab9e08d49ed039c7bf67c33a1e4151fd349af2b8aa728eaf8d609fda536859a4227938d16575dd70518d2c8bd085703e142bb166058b169beffb458a
 EBUILD gentoo-sources-3.10.5.ebuild 866 SHA256 d156023a6ddcfa26e21d7ae6039c765580d9f73b97ff2323531092a72f6ba399 SHA512 9ff3cd9c4264d05aa1b45ea5a380f879b817cb67f3d6d9c27c4aabb4a8e4f66304248905bbf2c96972f5986b2645262a294b6d99c641bf8cc9d04621091aafd8 WHIRLPOOL 305a03c0e76f68050e1d32d7a62ffe297954082627509a82072d870b3f2c6db2d0eb633822dde98bfe4350bd27fed2d42098679a1b7ec3c6e413f9d7b4f4199f
 EBUILD gentoo-sources-3.2.48.ebuild 860 SHA256 151656f0758087f7fb7799c7cc18001799756283d4df26c56d345d3f12f233ea SHA512 ce956b487664086787c84a05c8dc81420911e5431da7b4eb4f10f5b034bdd885eea58881aba079ad8f8624fbd6b8bb3e11326fe1ada756023b3091c2c2fa7016 WHIRLPOOL ed267c32121fe3ee1dbe9499f6e80832f7a4ef716d01b4e542f879d197b7b42d287ce23bfc47b4ff21d1da9c1618112124d6d6228a3992abcc5471c1c99ba5b8
 EBUILD gentoo-sources-3.4.54.ebuild 860 SHA256 2d9f4a8692a42603e08f37b617aa982a8eada07fa104edc121e8144d98c01570 SHA512 f229ce25bf36c8e082c3365aae8f04b92d16fb474cf574a5444eed3d595855207a7a2e60f542e313d6a27a27862fda7d6f0f27b2a84129643e3510a9a1f75618 WHIRLPOOL 6b1cd1f75fd57971fc098e821d4b186cd65e602d09262a003355ce23e8bf95c9df4604059ca93ad37fa5648b6f1c154a7f54c8a952590fd87d4c1ed25f103bf0
 EBUILD gentoo-sources-3.4.55.ebuild 861 SHA256 5c81ae3089c78bba6ea48e0832c5b760f4e8024bc161fe42f54e6b550f64434c SHA512 eddb387f15b1c2807ab1995cc03949b2b077f25f9ba984764f57ed7e735100c7aa457689ff24e69beb501dac6ae4f3bb58ccf194e6acc18147585da55b9f3c48 WHIRLPOOL 6345df743a873ec775d4cc75dffa1a8102b744318454638b17c01a8a976ad30faa2200109435207e46891c5bf3dc2b8a5dfa16869f10b4a8b0ae18f8be84dcc7
 EBUILD gentoo-sources-3.8.13.ebuild 846 SHA256 33d2ce69f65cc6582c77554c85971c92f820fff7fc3529539ff9e805bb6892f9 SHA512 de12c02af36d26099b9fdf4ee5d6fde214c984d8582008f448362c71754c1086efca3a00a8a61b5465380128495b0d650dae72b01222e8b6d05b655134923206 WHIRLPOOL e291507896cc4dd530752179b9d603e3bd7e283c4e81f44a28b6c0f573fce6cedf98f6fa6f31259126f0de979b0edcd23e3e5de4d877083be0fc2e09c4fd4904
 EBUILD gentoo-sources-3.9.11-r1.ebuild 859 SHA256 aa4e93f369bc8249bfa2f3a9cc52cf30d56de45f392cebef5d18f86aa5675eb0 SHA512 6779e31182f1f0b3996df11fdb4c1bf5728bddf8b880243dbeb6e4c60bba1b14ab01d27e7fe6ad707b87fc24b3d3660352b4f62b4325c0ad01b73cf6f6e436cc WHIRLPOOL f28c8edb48863cb12fc5a6c9863e4d1061deb161ce07e70589f20351b0cf388f03ca9bc1fde61c76690ef5eda83ccef8b2607d5e422b3e162b78674520316755
-MISC ChangeLog 30415 SHA256 8dc98a1c29a9d464160340d08b44e272f38f732b014c7a6971f11c764d34f40c SHA512 81cb4575227614b1806182d9fe9041df2964f1ba3ba2060bbe007b01c1c2d772f214dd467fae276f0cfe6fd8070bdc8693352e361bba4154e1fd903ed8cfb130 WHIRLPOOL b3d3bbec337a709201e1eb180a1746636dcb44a9214c6bf08bc1ced5062341b4cb7a1a6165a16a717c10d85539f234ce981c1a1277bf06aecc0a18c7456d5734
+MISC ChangeLog 30633 SHA256 12d2bf1d1e999fd9658ff6232dcebc4c5dcd16d8fb874f8a549bdfa8fb88cd7a SHA512 3fc29bb4b21de15018999283047a5c84c6939724c6342464cf82a768fd0d2204c3f22d3cab371ac49eb1d9b90d8db5182733fe73197faaa7262720be71840e4a WHIRLPOOL 052cc895dfa20459062211e00c95b849f36383b11b880edf3c34af872ca2ecbeaa19df0dfb8f5ecdd89e53b0802bd76e9644910fb8930f4ae388aa97abec7e94
 MISC ChangeLog-2007 91971 SHA256 8c37498df2246749abb2fd1eca05c396257989b91ba5ec0f83cedb25488118a9 SHA512 2215a9856bc1706abe21ad51d0af6176fec226e85a56ad8f54664d20a041bbe076359347f473a87c47904df2d8d2006d56d1535528b2eb7aa756f96ad9554876 WHIRLPOOL dd881fa7bbfc42ca35a46a0fe01d751b3373ac8f4e2ce5626ff26f94244d729e107f57b1be43daf3b73c2f18b090ee896d8a5eb38888fa9ca01097d1cbd46da7
 MISC ChangeLog-2012 101665 SHA256 a60304f93fc4644cdf0b068e586f6036d4463ea4b21bd745a8aa926da71db6ec SHA512 892085806f4c87f64db78e04d3c215ae6bca8939ffeced8a3792fe4a2476e72d2cc9dbc8a3b906943971eb853c337847e6a8bf976f9496be9944e216fb983234 WHIRLPOOL 590f17b5a90f48fa1733959500ce06fd72f95524b64b6abf508653a616961af2c0ea04ca2dbfe5523ff9dcd3bc67b3b24bc368eb84326d091ca449e558555f46
 MISC metadata.xml 363 SHA256 54a8852be2c5b6dfd55328d8897c47e780d693a3db13ea1954f2f54a9d1eb23c SHA512 167ca93872e5dccd0d038b0c8255c9f988995dbbb1e951b6c004e319200001611a08067d03c81f228606535b00adf52bd28d87b00884719a39e19ed81db223ae WHIRLPOOL c0f3ed6331a9fbdbc13a9a2e7754c50b1d1149c1d6fb028082ba80870b9b7bdc15de39d3bbabc1dac768cabd32e93bb79e7ce4bc6d0d7c19ec3aa45e28ec3de8
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2.0.20 (GNU/Linux)
 
-iEYEAREIAAYFAlH/wxIACgkQPDPGULV25OODVACfSZ8OeSuWAcbP63coTH2Qm9B3
-uLUAmwaRKwWMUjIoTvRURKNdddWtkj/g
-=PcHy
+iEYEAREIAAYFAlIBIs0ACgkQPDPGULV25OPf/ACfSIAG86JhwdcMgqRaix7PwMwu
+77YAoMX6J/hpQlZbMMfTe271ly1v07Mi
+=q46M
 -----END PGP SIGNATURE-----
