@@ -1,6 +1,13 @@
 # ChangeLog for sys-kernel/gentoo-sources
 # Copyright 1999-2013 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/sys-kernel/gentoo-sources/ChangeLog,v 1.1167 2013/08/05 14:46:40 mpagano Exp $
+# $Header: /var/cvsroot/gentoo-x86/sys-kernel/gentoo-sources/ChangeLog,v 1.1168 2013/08/06 16:22:30 mpagano Exp $
+
+*gentoo-sources-3.10.5-r1 (06 Aug 2013)
+
+  06 Aug 2013; Michael Pagano <mpagano@gentoo.org>
+  +gentoo-sources-3.10.5-r1.ebuild:
+  Don't attempt to send extended INQUIRY command if skip_vpd_pages is set. Bug
+  #478698
 
   05 Aug 2013; Michael Pagano <mpagano@gentoo.org>
   -gentoo-sources-3.0.84.ebuild, -gentoo-sources-3.0.85.ebuild,
